Add global filtering

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,5 +332,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<ng-tabular [columns]="columns" [rows]="rows" [itemsPerPage]="3"></ng-tabular>
+<ng-tabular [columns]="columns" [rows]="rows" [config]="tableConfig"></ng-tabular>
 <router-outlet />
