--- a/projects/ng-tabular/src/lib/tabular.component.html
+++ b/projects/ng-tabular/src/lib/tabular.component.html
@@ -2,13 +2,9 @@
 <div class="overflow-x-auto bg-gray-100 p-4 rounded-lg shadow-md">
   <!-- Search box -->
   <div class="mb-4 flex justify-between items-center">
-    <input
-      type="text"
-      [(ngModel)]="searchTerm"
-      (ngModelChange)="onSearchChange(searchTerm)"
-      placeholder="Search..."
-      class="border border-gray-300 rounded-md p-2 w-1/3 focus:ring-2 focus:ring-blue-500 outline-none"
-    />
+    <input *ngIf="config.enableSearchBox" type="text" [(ngModel)]="globalSearchTerm"
+      (ngModelChange)="onSearchChange(globalSearchTerm)" placeholder="Search..."
+      class="border border-gray-300 rounded-md p-2 w-1/3 focus:ring-2 focus:ring-blue-500 outline-none" />
   </div>
 
   <!-- Table element -->
@@ -17,35 +13,34 @@
     <thead class="bg-gray-100">
       <tr>
         <!-- Column headers -->
-        <th
-          *ngFor="let column of columns; let i = index"
-          class="px-6 py-3 text-left text-sm font-medium text-gray-600 uppercase tracking-wider hover:bg-gray-200 cursor-pointer"
-        >
-          <button (click)="sort(column.field)" class="flex items-center space-x-1 focus:outline-none">
-            <span>{{ column.field }}</span>
+        <th *ngFor="let column of columns; let i = index"
+          class="px-6 py-3 text-left text-sm font-medium text-gray-600 uppercase tracking-wider hover:bg-gray-200 cursor-pointer">
+
+          <input
+            type="text"
+            [(ngModel)]="searchTerms[column.field]"
+            (ngModelChange)="onColumnSearchChange(column.field, searchTerms[column.field])"
+            placeholder="Buscar en {{ column.headerName }}"
+            class="mt-2 border rounded-md p-2 w-full"
+          />
+
+          <button *ngIf="config.enableSorting" (click)="sort(column.field)"
+            class="flex items-center space-x-1 focus:outline-none">
+            <span>{{ column.headerName || column.field }}</span>
             <span *ngIf="sortColumn === column.field">
               <!-- Sort direction icon -->
-              <svg
-                *ngIf="sortDirection === 'asc'"
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-4 w-4 text-gray-600"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
+              <svg *ngIf="sortDirection === 'asc'" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-600"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
               </svg>
-              <svg
-                *ngIf="sortDirection === 'desc'"
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-4 w-4 text-gray-600"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
+              <svg *ngIf="sortDirection === 'desc'" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-600"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
               </svg>
             </span>
+          </button>
+          <button *ngIf="!config.enableSorting" class="flex items-center space-x-1 focus:outline-none">
+            <span>{{ column.headerName || column.field }}</span>
           </button>
         </th>
       </tr>
@@ -53,33 +48,32 @@
 
     <!-- Table body -->
     <tbody class="bg-white divide-y divide-gray-200">
-      <tr
-        *ngFor="let row of paginatedRows"
-        class="hover:bg-gray-50 transition-colors duration-200 ease-in-out"
-      >
+      <tr *ngFor="let row of paginatedRows" class="hover:bg-gray-50 transition-colors duration-200 ease-in-out">
         <td *ngFor="let column of columns" class="px-6 py-4 whitespace-nowrap text-sm text-gray-700">
-          {{ row[column.field] }}
+          {{ formatData(row[column.field]) }}
         </td>
       </tr>
     </tbody>
   </table>
 
   <!-- Pagination controls -->
-  <div class="mt-4 flex justify-between items-center">
-    <button
-      (click)="previousPage()"
-      [disabled]="currentPage === 1"
-      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300"
-    >
+  <div *ngIf="config.enablePagination" class="mt-4 flex justify-between items-center">
+    <button (click)="goToPage(1)" [disabled]="currentPage === 1"
+      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300">
+      First
+    </button>
+    <button (click)="previousPage()" [disabled]="currentPage === 1"
+      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300">
       Previous
     </button>
     <span class="text-sm text-gray-600">Page {{ currentPage }} of {{ totalPages }}</span>
-    <button
-      (click)="nextPage()"
-      [disabled]="currentPage === totalPages"
-      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300"
-    >
+    <button (click)="nextPage()" [disabled]="currentPage === totalPages"
+      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300">
       Next
+    </button>
+    <button (click)="goToPage(totalPages)" [disabled]="currentPage === totalPages"
+      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300">
+      Last
     </button>
   </div>
 </div>
